--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "express": "^5.1.0",
-    "googleapis": "^153.0.0"
+    "googleapis": "^153.0.0",
+    "nodemailer": "^6.9.11"
   },
   "scripts": {
     "start": "node server.js"
